--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">PacMax</string>
     <string name="admob_app_id">
-        ca-app-pub-6862851420275633~8814775660</string>
+        ca-app-pub-xxxxxxxxxxxxxxxxxxxx</string>
     <string name="rate_dialog_title">Rate this app</string>
     <string name="rate_dialog_message">If you enjoy playing this game,would you mind taking a moment to rate it?It won\'t take more than a minute.Thanks for your support.</string>
     <string name="rate_dialog_ok">Rate It Now</string>
